fix: hide expand button on mobile view

--- a/skyshot-react/src/components/LightboxGallery.css
+++ b/skyshot-react/src/components/LightboxGallery.css
@@ -62,6 +62,10 @@
   .lightbox-next {
     display: none;
   }
+  .lightbox-expand,
+  .lightbox-fullscreen {
+    display: none;
+  }
 }
 
 .lightbox-swipe-area {
